--- a/AccessabilityActivity.html
+++ b/AccessabilityActivity.html
@@ -16,7 +16,7 @@
 	
 	<main>
 		<h2>About this activity</h2>
-		<p>This webpage currently has several accessibility issues. There are many accessability issues that the validator will not pick up on. Google Chrome has a developer tool called Lighthouse that can help us correct these. There other accessability tools that are useful and should be used along with Lighthouse, but we will focus on Lighthouse for this activity. Additional information <a href="https://developers.google.com/web/tools/lighthouse/?utm_source=devtools">click here</a></p>
+		<p>This webpage currently has several accessibility issues. There are many accessability issues that the validator will not pick up on. Google Chrome has a developer tool called Lighthouse that can help us correct these. There other accessability tools that are useful and should be used along with Lighthouse, but we will focus on Lighthouse for this activity. Additional information <a href="https://developers.google.com/web/tools/lighthouse/?utm_source=devtools">Learn more about Google Lighthouse</a></p>
 	</main>
 
 </body>
